@@ -19,37 +19,38 @@ _start:
 	ldr pc, =fiq @ FIQ
 
 _reset:
-	// After reset, all bits 0 of register 6 are reset (all region disabled).
-	// So we just enable what we need.
-	// Region 0 is the default for data, where shared data will reside. We want uncacheable but bufferable
+	// Here is the memory map we set up :
+	// From 0 to 0x10000 is our code + all initialized datas + bss
+	// From 0x10000 to 0x100000 is nothing, where we put our two stacks : at 0x80000 ours, at 0x100000 irq's.
+	// From 0x100000 to the end lies our shared structure.
+	// The first 0x10000 bytes are for commands and various datas : we set this uncached but buffered
+	// All other memory (except IO) are cacheable.
+	//
+	// Data region 0 is the default for data.
 	mov r0, #0x3F	// 4GB page starting at 0x0
 	mcr p15, 0, r0, c6, c0, 0
-	// Region 1 is for the MP registers, at address 0xC0000000 to the end (the last gigabyte)
-	mov r0, #0xC0000000	// base at registers start
-	orr r0, r0, #0x3B	// size of 1Gb
-	mcr p15, 0, r0, c6, c1, 0	// this is data region1
-	// Region 2 is both for our code, datas and stack. It's the first 64Kb.
+	// Code region 0 is for our code. It's the first 64Kb.
 	mov r0, #0x1F
+	mcr p15, 0, r0, c6, c0, 1
+	// Data region 1 is for the MP registers, at address 0xC0000000-0x2000000 to the end (the last gigabyte)
+	orr r0, r0, #0xBE000000	// base at registers start
+	mcr p15, 0, r0, c6, c1, 0
+	// Data region 2 is for commands and volatiles
+	mov r0, #0x27
+	orr r0, r0, #0x100000
 	mcr p15, 0, r0, c6, c2, 0
-	mcr p15, 0, r0, c6, c2, 1
-	// region 3 (area of shared->buffers used for textures)
-	mov r0, #0x2F	// 16 Mb from 0
-	mcr p15, 0, r0, c6, c3, 0
-	// As it's faster to have both read and writes cached, we should do the oposite : all cacheable, then some parts of shared + registers non cacheable.
 	// And that's all.
-	// Only region 2 is cacheable, both for code and data
-	mov r0, #0xC	// reg 3 cacheable also
+	// Data region 0 is cacheable/bufferable, data region 1 is uncacheable/unbufferable, date region 2 is uncacheable/bufferable
+	mov r0, #0x1
 	mcr p15, 0, r0, c2, c0, 0
-	mov r0, #0x4
-	mcr p15, 0, r0, c2, c0, 1
-	// Only regions 0 and 2 are bufferables (IO registers are not)
-	mov r0, #0xD //#0x5
+	mcr p15, 0, r0, c2, c0, 1	// code region 0 is cacheable also
+	mov r0, #0x5
 	mcr p15, 0, r0, c3, c0, 0
 	// Full access for all runlevels to all these regions for datas
-	mov r0, #0xFF //#0x3F
+	mov r0, #0xFF
 	mcr p15, 0, r0, c5, c0, 0
-	// Only to region 2 for instructions
-	mov r0, #0x30
+	// Only to region 0 for code
+	mov r0, #0x3
 	mcr p15, 0, r0, c5, c0, 1
 	// Now enable all these nice features
 	mov r0, #0xC0000000	// Asynchronous (+FastBus) clocking (don't know what's this, but sounds quite kewl)
@@ -57,7 +58,7 @@ _reset:
 	orr r0, r0, #0x7D		// DCache and Protection Unit enable
 	mcr p15, 0, r0, c1, c0, 0
 
-	mov r13, #0x10000	// 64Kb should be enought for everyone
+	mov r13, #0x80000	// Our stack lives here
 	ldr r12, =0xDEADBEEF	// stamp a signature in stack so we know core is running and can detect stack underflow
 	ldr r11, =0xFACE0000
 	stmdb r13!, {r11,r12}
@@ -71,7 +72,7 @@ _undefi:
 
 _safe_irq_handler:
 	sub lr, lr, #4
-	mov sp, #0x02000000	// there are some room left up there
+	mov sp, #0x100000	// IRQ stack goes here
 	stmfd sp!, {r0 - r12, lr}
 	bl irq_handler
 	ldmfd sp!, {r0 - r12, pc}^
