@@ -181,10 +181,10 @@ static int32_t next_power_of_2(int32_t x) {
 
 static void ctx_reset(void) {
 	my_memset(&ctx, 0, sizeof ctx);
-	ctx.location.out.width_log = next_power_of_2(SCREEN_WIDTH+2);
-	ctx.location.out.height = SCREEN_HEIGHT+2;
+	ctx.location.out.width_log = next_power_of_2(SCREEN_WIDTH+6);
+	ctx.location.out.height = SCREEN_HEIGHT+6;
 	ctx.view.winPos[0] = ((1<<ctx.location.out.width_log)-SCREEN_WIDTH)>>1;
-	ctx.view.winPos[1] = 1;
+	ctx.view.winPos[1] = 3;
 	ctx.view.clipMin[0] = (-SCREEN_WIDTH>>1)-1;
 	ctx.view.clipMin[1] = (-SCREEN_HEIGHT>>1)-1;
 	ctx.view.clipMax[0] = (SCREEN_WIDTH>>1)+1;
