@@ -9,7 +9,7 @@ OFF_ctx.poly.cmdFacet.size=252
 OFF_ctx.poly.cmdFacet.color=256
 OFF_ctx.poly.cmdFacet.rendering_type=260
 OFF_ctx.poly.vectors=264
-OFF_ctx.poly.z_alpha=1824
+OFF_ctx.poly.z_alpha=1884
 OFF_ctx.poly.scan_dir=1860
 OFF_ctx.poly.nc_dir=1864
 OFF_ctx.poly.first_vector=1868
@@ -17,12 +17,12 @@ OFF_ctx.poly.nb_params=1872
 OFF_ctx.poly.nc_log=1876
 OFF_ctx.location.txt.address=220
 OFF_ctx.location.txt_mask=244
-OFF_ctx.line.count=1980
-OFF_ctx.line.w=1984
-OFF_ctx.line.dw=1988
-OFF_ctx.line.decliv=1992
-OFF_ctx.line.ddecliv=1996
-OFF_ctx.line.param=2000
-OFF_ctx.line.dparam=2012
-OFF_shared.buffers=0
-BUFFERS_ADDR=0x10000
+OFF_ctx.line.count=2020
+OFF_ctx.line.w=2024
+OFF_ctx.line.dw=2028
+OFF_ctx.line.decliv=2032
+OFF_ctx.line.ddecliv=2036
+OFF_ctx.line.param=2040
+OFF_ctx.line.dparam=2052
+OFF_shared.buffers=1048576
+BUFFERS_ADDR=0x200000
