@@ -91,6 +91,8 @@ extern void draw_line_uv(void);
 #else
 static void draw_line_uv(void) {
 	do {
+//		uint8_t z = ctx.poly.z_alpha>>8;
+//		uint32_t color = (z<<16)|(z<<8)|z;
 		uint32_t color = texture_color(&ctx.location.txt, ctx.line.param[0], ctx.line.param[1]);
 //		if (start_poly) color |= ctx.poly.scan_dir ? 0x3e0 : 0xf800;
 		uint32_t *w = (uint32_t *)(ctx.line.w + ((ctx.line.decliv>>16)<<ctx.poly.nc_log));
@@ -133,14 +135,23 @@ static void draw_line_uvi(void) {
 }
 
 // buffers are so lower coords have lower addresses. direct coord system was just a convention, right ?
+#define min(a,b) ((a)<=(b) ? (a):(b))
+#define max(a,b) ((a)>(b) ? (a):(b))
 static void draw_line(void) {
-	int32_t const c_start = ctx.trap.side[0].c>>16;
+	int32_t c_start, c_stop;
+	if (ctx.trap.side[0].c < ctx.trap.side[1].c) {
+		c_start = min(ctx.trap.side[0].c, ctx.trap.side[0].c_next)>>16;
+		c_stop = max(ctx.trap.side[1].c, ctx.trap.side[1].c_next)>>16;
+	} else {
+		c_start = max(ctx.trap.side[0].c, ctx.trap.side[0].c_next)>>16;
+		c_stop = min(ctx.trap.side[1].c, ctx.trap.side[1].c_next)>>16;
+	}
 	ctx.line.dw = 4;
 	ctx.line.ddecliv = ctx.poly.decliveness;
-	ctx.line.count = (ctx.trap.side[1].c>>16) - c_start;
+	ctx.line.count = c_stop - c_start;
 	if (ctx.line.count < 0) {
 		ctx.line.count = -ctx.line.count;
-		ctx.line.dw = -4;
+		ctx.line.dw = -ctx.line.dw;
 		ctx.line.ddecliv = -ctx.line.ddecliv;
 	}
 	int32_t inv_dc = 0;
@@ -153,9 +164,9 @@ static void draw_line(void) {
 	}
 	ctx.line.decliv = ctx.poly.decliveness*c_start;	// 16.16
 	if (ctx.poly.scan_dir == 0) {
-		ctx.line.w = (uint8_t *)&shared->buffers[ctx.location.out.address + ((ctx.poly.nc_declived+ctx.view.winPos[1])<<ctx.location.out.width_log) + c_start+ctx.view.winPos[0]];
+		ctx.line.w = (uint8_t *)&shared->buffers[ctx.location.out.address + (((ctx.poly.nc_declived>>16)+ctx.view.winPos[1])<<ctx.location.out.width_log) + c_start+ctx.view.winPos[0]];
 	} else {
-		ctx.line.w = (uint8_t *)&shared->buffers[ctx.location.out.address + ((c_start+ctx.view.winPos[1])<<ctx.location.out.width_log) + ctx.poly.nc_declived + ctx.view.winPos[0]];
+		ctx.line.w = (uint8_t *)&shared->buffers[ctx.location.out.address + ((c_start+ctx.view.winPos[1])<<ctx.location.out.width_log) + (ctx.poly.nc_declived>>16) + ctx.view.winPos[0]];
 		ctx.line.dw <<= ctx.location.out.width_log;
 	}
 	static draw_line_t const draw_lines[NB_RENDERING_TYPES] = {
@@ -167,6 +178,69 @@ static void draw_line(void) {
 	if (start_poly) start_poly --;
 }
 
+static void draw_trapeze(void) {
+	// we have ctx.trap.side[], nc_declived, all params.
+	// we must render until first ending side (and return with nc_declived = this ending nc coord)
+	bool quit = false;
+	do {
+		// compute nc_declived_next. normally, this is next scan-line border
+		bool complete_scan_line = true;
+		if ((ctx.poly.nc_declived & 0xffff) == 0) {
+			ctx.poly.nc_declived_next = ctx.poly.nc_declived + (ctx.poly.nc_dir << 16);
+		} else {
+			ctx.poly.nc_declived_next = ctx.poly.nc_declived & 0xffff0000;
+			if (ctx.poly.nc_dir == 1) {
+				ctx.poly.nc_declived_next += 1<<16;
+			}
+			complete_scan_line = false;
+		}
+		// but we can end sooner
+		for (unsigned side=2; side--; ) {
+			if (
+				(ctx.poly.nc_dir > 0 && ctx.poly.vectors[ ctx.trap.side[side].end_v ].nc_declived <= ctx.poly.nc_declived_next) ||
+				(ctx.poly.nc_dir < 0 && ctx.poly.vectors[ ctx.trap.side[side].end_v ].nc_declived >= ctx.poly.nc_declived_next)
+			) {
+				ctx.poly.nc_declived_next = ctx.poly.vectors[ ctx.trap.side[side].end_v ].nc_declived;
+				complete_scan_line = false;
+				quit = true;
+			}
+		}
+		int32_t dnc = ctx.poly.nc_declived_next - ctx.poly.nc_declived;
+		dnc = Fix_abs(dnc);
+		// compute z_alpha_next
+		if (ctx.poly.nb_params > 0) {
+			if (complete_scan_line) {
+				ctx.poly.z_den += ctx.poly.z_dden;
+				ctx.poly.z_num += ctx.poly.z_dnum;
+			} else {
+				ctx.poly.z_den += ((int64_t)dnc*ctx.poly.z_dden)>>16;
+				ctx.poly.z_num += ((int64_t)dnc*ctx.poly.z_dnum)>>16;
+			}
+			if (ctx.poly.z_den) ctx.poly.z_alpha_next = ((int64_t)ctx.poly.z_num<<16)/ctx.poly.z_den;
+		}
+		// now compute c_nexts
+		for (unsigned side=2; side--; ) {
+			if (complete_scan_line) {
+				ctx.trap.side[side].c_next = ctx.trap.side[side].c + ctx.trap.side[side].dc;
+			} else {
+				ctx.trap.side[side].c_next = ctx.trap.side[side].c + (((int64_t)dnc*ctx.trap.side[side].dc)>>16);
+			}
+		}
+		// draw 'scanline'
+		draw_line();	// will do another DIV
+		// next scanline (1 DIV)
+		ctx.poly.z_alpha = ctx.poly.z_alpha_next;
+		for (unsigned side=2; side--; ) {
+			int32_t dalpha = ctx.poly.z_alpha - ctx.trap.side[side].z_alpha_start;
+			for (unsigned p=ctx.poly.nb_params; p--; ) {
+				ctx.trap.side[side].param[p] = (((int64_t)ctx.trap.side[side].param_alpha[p]*dalpha)>>16) + ctx.poly.vectors[ ctx.trap.side[side].start_v ].cmdVector.geom.param[p];
+			}
+			ctx.trap.side[side].c = ctx.trap.side[side].c_next;
+		}
+		ctx.poly.nc_declived = ctx.poly.nc_declived_next;
+	} while (! quit);
+}
+
 /*
  * Public Functions
  */
@@ -176,12 +250,13 @@ void draw_poly(void) {
 	unsigned previous_target = perftime_target();
 	perftime_enter(PERF_POLY, "poly");
 	start_poly = 6;
+	// compute decliveness related parameters
 	ctx.poly.decliveness = 0;
 	ctx.poly.scan_dir = 0;
 	ctx.poly.nc_log = ctx.location.out.width_log+2;
 	// bounding box
-	{
-		unsigned v=ctx.poly.first_vector;
+	if (ctx.poly.nb_params > 0) {
+		unsigned v = ctx.poly.first_vector;
 		ctx.poly.bbox[0][MIN] = ctx.poly.bbox[1][MIN] = ctx.poly.bbox[2][MIN] = ctx.poly.bbox[0][MAX] = ctx.poly.bbox[1][MAX] = ctx.poly.bbox[2][MAX] = v;
 		do {
 			for (unsigned c=2; c--; ) {
@@ -196,15 +271,20 @@ void draw_poly(void) {
 				ctx.poly.bbox[2][MAX] = v;
 			v = ctx.poly.vectors[v].next;
 		} while (v != ctx.poly.first_vector);
-	}
-	// compute decliveness (2 DIVs)
-	if (ctx.poly.nb_params > 0) {	// else we keep default values : we don't need decliveness.
-		int32_t m[2];
+		// compute decliveness (2 DIVs)
+		int32_t m[2];	// 16.16
 		// FIXME: with clipping, A can get very close from A or B.
 #		define B_VEC (ctx.poly.vectors[ctx.poly.bbox[2][MIN]])
 #		define C_VEC (ctx.poly.vectors[ctx.poly.bbox[2][MAX]])
-		int a_vec = ctx.poly.first_vector;
-		while (a_vec == ctx.poly.bbox[2][MIN] || a_vec == ctx.poly.bbox[2][MAX]) a_vec = ctx.poly.vectors[a_vec].next;
+		unsigned a_vec;
+		unsigned a = ctx.poly.first_vector;
+		do {
+			if (a != ctx.poly.bbox[2][MIN] && a != ctx.poly.bbox[2][MAX]) {
+				a_vec = a;
+				if (a < ctx.poly.cmdFacet.size) break;	// we'd rather use an unclipped vertex
+			}
+			a = ctx.poly.vectors[a].next;
+		} while (a != ctx.poly.first_vector);
 #		define A_VEC (ctx.poly.vectors[a_vec])
 		if (B_VEC.cmdVector.geom.c3d[2] == C_VEC.cmdVector.geom.c3d[2]) {	// BC is Z-const
 			m[0] = C_VEC.c2d[0]-B_VEC.c2d[0];
@@ -223,8 +303,6 @@ void draw_poly(void) {
 		if (m[0]) ctx.poly.decliveness = (((int64_t)m[1])<<16)/m[0];
 	}
 	// init trapeze. start at Z min.
-	int64_t z_num, z_den;	/*24.16*/
-	int32_t z_dden, z_dnum; /*16.16*/
 	int32_t Z0 = 0, ZN = 0;
 	{
 		ctx.poly.nc_declived = INT32_MAX;
@@ -233,7 +311,7 @@ void draw_poly(void) {
 		ctx.poly.nc_dir = 1;
 		unsigned v = ctx.poly.first_vector;
 		do {
-			int32_t const my_nc_declived = ctx.poly.vectors[v].c2d[!ctx.poly.scan_dir] - ((ctx.poly.decliveness*ctx.poly.vectors[v].c2d[ctx.poly.scan_dir])>>16);
+			int32_t const my_nc_declived = ctx.poly.vectors[v].c2d[!ctx.poly.scan_dir] - (((int64_t)ctx.poly.decliveness*ctx.poly.vectors[v].c2d[ctx.poly.scan_dir])>>16);
 			ctx.poly.vectors[v].nc_declived = my_nc_declived;
 			if (my_nc_declived <= ctx.poly.nc_declived) {
 				ctx.poly.nc_declived = my_nc_declived;
@@ -255,45 +333,43 @@ void draw_poly(void) {
 		}
 		// init z-interpolation along non-scanlines (nc)
 		{
-			z_num = 0;
+			ctx.poly.z_num = 0;
 			int32_t const DZ = ZN - Z0 /*16.16*/;
-			z_dden = ctx.poly.nc_dir == 1 ? -DZ:DZ;
-			z_dnum = ctx.poly.nc_dir == 1 ? Z0:-Z0;
+			ctx.poly.z_dden = ctx.poly.nc_dir == 1 ? -DZ:DZ;
+			ctx.poly.z_dnum = ctx.poly.nc_dir == 1 ? Z0:-Z0;
 			int32_t const dnc = max_nc_declived-ctx.poly.nc_declived;
-			z_den = (int64_t)ZN*dnc;
+			ctx.poly.z_den = ((int64_t)ZN*dnc)>>16;
 			ctx.trap.side[0].start_v = ctx.trap.side[0].end_v = ctx.trap.side[1].start_v = ctx.trap.side[1].end_v = start_v;
 			ctx.poly.z_alpha = 0;
 		}
 	}
-	// render trapeze
+	// cut into trapezes
 	do {
-		// advance trapeze and compute dc if needed
 		for (int side=2; side--; ) {
 			bool dc_ok = true;
-			while (
-				(ctx.poly.nc_dir == 1 && ctx.poly.vectors[ ctx.trap.side[side].end_v ].nc_declived <= ctx.poly.nc_declived) ||
-				(ctx.poly.nc_dir == -1 && ctx.poly.vectors[ ctx.trap.side[side].end_v ].nc_declived >= ctx.poly.nc_declived)
-			) {	// skip "flat" trapezes
+#define DNC_MIN 0x8000	// if dnc is below, we consider the edge is flat (not enough precision bits)
+			int32_t dnc;
+			while (1) {
+				dnc = ctx.poly.vectors[ ctx.trap.side[side].end_v ].nc_declived - ctx.poly.nc_declived;
+				dnc = Fix_abs(dnc);
+				if (dnc > DNC_MIN) break;	// not flat
 				if (0 == ctx.poly.cmdFacet.size--) goto end_poly;
 				ctx.trap.side[side].start_v = ctx.trap.side[side].end_v;
 				ctx.trap.side[side].end_v = 0==side ? ctx.poly.vectors[ctx.trap.side[side].end_v].prev:ctx.poly.vectors[ctx.trap.side[side].end_v].next;
-				ctx.trap.side[side].c = ctx.poly.vectors[ ctx.trap.side[side].start_v ].c2d[ctx.poly.scan_dir]<<16;
+				ctx.trap.side[side].c = ctx.poly.vectors[ ctx.trap.side[side].start_v ].c2d[ctx.poly.scan_dir];
 				dc_ok = false;
 			}
-			if (! dc_ok) {	// 3 DIVs / sides
-				int32_t const num = ctx.poly.vectors[ ctx.trap.side[side].end_v ].c2d[ctx.poly.scan_dir]-ctx.poly.vectors[ ctx.trap.side[side].start_v ].c2d[ctx.poly.scan_dir];
-				int32_t dnc = ctx.poly.vectors[ ctx.trap.side[side].end_v ].nc_declived - ctx.poly.nc_declived;
-				dnc = Fix_abs(dnc);
+			if (! dc_ok) {
+				int32_t const num = ctx.poly.vectors[ ctx.trap.side[side].end_v ].c2d[ctx.poly.scan_dir] - ctx.trap.side[side].c;
 				ctx.trap.side[side].dc = ((int64_t)num<<16)/dnc;
 				// compute alpha_params used for vector parameters
 				if (ctx.poly.nb_params > 0) {
-					// first, compute the z_alpha of end_v (and store it for later comparaison)
-					int64_t n = z_num + (int64_t)z_dnum*dnc;	// 25.16
-					int64_t d = z_den + (int64_t)z_dden*dnc;	// 25.16
+					// first, compute the z_alpha of end_v
+					int64_t n = ctx.poly.z_num + (((int64_t)ctx.poly.z_dnum*dnc)>>16);	// 25.16
+					int64_t d = ctx.poly.z_den + (((int64_t)ctx.poly.z_dden*dnc)>>16);	// 25.16
 					ctx.trap.side[side].z_alpha_start = ctx.poly.z_alpha;
 					ctx.trap.side[side].z_alpha_end = ctx.poly.z_alpha;
 					if (d) ctx.trap.side[side].z_alpha_end = ((int64_t)n<<16)/d;
-					// then alpha_params
 					int32_t const dalpha = ctx.trap.side[side].z_alpha_end - ctx.trap.side[side].z_alpha_start;
 					int32_t inv_dalpha = 0;
 					if (dalpha) inv_dalpha = Fix_inv(dalpha);
@@ -307,24 +383,9 @@ void draw_poly(void) {
 				start_poly ++;
 			}
 		}
-		// draw 'scanline'
-		draw_line();	// will do another DIV
-		// next scanline (1 DIV)
-		ctx.poly.nc_declived += ctx.poly.nc_dir;
-		if (ctx.poly.nb_params > 0) {
-			z_den += z_dden;
-			z_num += z_dnum;
-			if (z_den) ctx.poly.z_alpha = ((int64_t)z_num<<16)/z_den;
-		}
-		for (unsigned side=2; side--; ) {
-			int32_t dalpha = ctx.poly.z_alpha - ctx.trap.side[side].z_alpha_start;
-			for (unsigned p=ctx.poly.nb_params; p--; ) {
-				ctx.trap.side[side].param[p] = (((int64_t)ctx.trap.side[side].param_alpha[p]*dalpha)>>16) + ctx.poly.vectors[ ctx.trap.side[side].start_v ].cmdVector.geom.param[p];
-			}
-			ctx.trap.side[side].c += ctx.trap.side[side].dc;
-		}
+		// render trapeze (and advance nc_declived, c, and all params)
+		draw_trapeze();
 	} while (1);
 end_poly:;
 	perftime_enter(previous_target, NULL);
 }
-
